crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@member_access_with_unreachable.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/member_access_with_unreachable.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "ReturnStatement\nreturn <value>" ]
    2 [ label = "unreachable\nReturnStatement\nreturn <value>" ]
    3 [ label = "unreachable" ]
    4 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    1 -> 2 [ label = Unreachable , style = "dotted" ]
    2 -> 3 [ label = Unreachable , style = "dotted" ]
    0 -> 4 [ label = Normal ]
}
