crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@nested_computed_member_expression.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/nested_computed_member_expression.js
---
digraph {
    0 [ label = ""]
    1 [ label = "return <value>"]
    2 [ label = "Unreachable()"]
    3 [ label = ""]
    0 -> 1 [ ]
    1 -> 2 [ ]
    0 -> 3 [ ]
}
