crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@new_class_then_call_fn.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/new_class_then_call_fn.js
---
digraph {
    0 [ label = "" ]
}
