crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@parenthesized_and_sequence_expr.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/parenthesized_and_sequence_expr.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    0 -> 2 [ label = Normal ]
    2 -> 3 [ label = NewFunction ]
    2 -> 4 [ label = Normal ]
}
