crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@private_in.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/private_in.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "statement\nreturn <value>" ]
    2 [ label = "unreachable" ]
    3 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    1 -> 2 [ label = Unreachable , style = "dotted" ]
    0 -> 3 [ label = Normal ]
}
