crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@switch_in_while.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/switch_in_while.js
---
digraph {
    0 [ label = "statement" ]
    1 [ label = "" ]
    2 [ label = "statement\nstatement" ]
    3 [ label = "" ]
    4 [ label = "statement\nstatement" ]
    5 [ label = "unreachable" ]
    6 [ label = "unreachable" ]
    7 [ label = "" ]
    8 [ label = "statement" ]
    9 [ label = "" ]
    3 -> 4 [ label = Normal ]
    4 -> 5 [ label = Unreachable , style = "dotted" ]
    5 -> 6 [ label = Unreachable , style = "dotted" ]
    4 -> 6 [ label = Normal ]
    7 -> 8 [ label = Normal ]
    3 -> 7 [ label = Normal ]
    6 -> 7 [ label = Normal ]
    2 -> 3 [ label = Normal ]
    2 -> 7 [ label = Normal ]
    7 -> 8 [ label = Normal ]
    0 -> 1 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    2 -> 9 [ label = Normal ]
    2 -> 1 [ label = Backedge ]
    1 -> 9 [ label = Normal ]
    5 -> 1 [ label = Normal ]
}
