crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@switch_statement.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/switch_statement.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = "Unreachable\nbreak"]
    5 [ label = ""]
    6 [ label = ""]
    7 [ label = ""]
    8 [ label = ""]
    9 [ label = "Unreachable\nbreak"]
    10 [ label = ""]
    11 [ label = "return <value>"]
    12 [ label = "Unreachable"]
    13 [ label = ""]
    14 [ label = ""]
    15 [ label = ""]
    16 [ label = "return <value>"]
    17 [ label = "Unreachable\nreturn <value>"]
    18 [ label = "Unreachable"]
    19 [ label = ""]
    0 -> 1 [ ]
    2 -> 3 [ ]
    3 -> 4 [ ]
    3 -> 4 [ ]
    5 -> 6 [ ]
    7 -> 8 [ ]
    8 -> 9 [ ]
    8 -> 9 [ ]
    10 -> 11 [ ]
    11 -> 12 [ ]
    13 -> 14 [ ]
    15 -> 16 [ ]
    16 -> 17 [ ]
    2 -> 5 [ ]
    2 -> 7 [ ]
    2 -> 10 [ ]
    2 -> 13 [ ]
    2 -> 15 [ ]
    4 -> 5 [ ]
    1 -> 2 [ ]
    5 -> 7 [ ]
    5 -> 10 [ ]
    5 -> 13 [ ]
    5 -> 15 [ ]
    6 -> 7 [ ]
    1 -> 5 [ ]
    7 -> 10 [ ]
    7 -> 13 [ ]
    7 -> 15 [ ]
    9 -> 10 [ ]
    1 -> 7 [ ]
    10 -> 13 [ ]
    10 -> 15 [ ]
    12 -> 13 [ ]
    1 -> 10 [ ]
    13 -> 15 [ ]
    14 -> 15 [ ]
    1 -> 13 [ ]
    1 -> 15 [ ]
    15 -> 17 [ ]
    17 -> 18 [ ]
    0 -> 19 [ ]
}
